[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "reinforced-breakout"
version = "0.1.0"
description = "AI-powered Breakout game with reinforcement learning (PyTorch) and Pygame."
readme = "readme.md"
license = { text = "MIT" }
authors = [
    { name = "Ben"}
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "typing_extensions>=4.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
rl = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
]
render = [
    "pygame>=2.5.0",
]

packages = ["src/physics"]
